[package]
name = "lk"
version = "0.1.0"
authors = ["Ricky (Degausser) <Ricky@Hosfelt.io>"]
edition = "2018"

[dependencies]
twilio = "0.1"
confy = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
directories = "2.0"
hostname = "0.3"
lettre = "0.9"
lettre_email = "0.9"
mmrs = "0.1"
notify-rust = "4.0.0-alpha.3"
